@@ -64,8 +64,8 @@ public class RebuildIndexTask implements Task {
 
     @Override
     public int compareTo(Delayed o) {
-        Long d1 = new Long(this.getDelay(TimeUnit.MILLISECONDS));
-        Long d2 = new Long(o.getDelay(TimeUnit.MILLISECONDS));
+        Long d1 = Long.valueOf(this.getDelay(TimeUnit.MILLISECONDS));
+        Long d2 = Long.valueOf(o.getDelay(TimeUnit.MILLISECONDS));
 
         return (d1.compareTo(d2));
     }
